--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,4 +15,4 @@ services:
      ports:
          - 80:8080
      volumes:
-         - nginx.conf:/etc/nginx/nginx.conf
+         - /home/ubuntu/nginx.conf:/etc/nginx/nginx.conf
