--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,8 @@
-server { # simple load balancing
+server { 
     listen          8080;
     server_name     ec2-54-224-115-219.compute-1.amazonaws.com;
-    access_log      logs/besu.access.log main;
 
     location / {
-      proxy_pass      http://localhost:8545;
+      proxy_pass      http://ubuntu_hflbesu_1:8545;
     }
   }
